Sat Oct 6 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.2
 *test/osx_jvmcheck.rb
	display vendor and version of JRE for OSX load test
 *test/osx_loadtest.rb
	add Oracle JVM support test for OSX
 *lib/rjb.rb
	add Oracle JVM support for OSX
Sun Aug 19 arton
 *ext/rjb.c
	export bound object's original ruby object as @wrapped
	RJB_VERSION -> 1.4.1
 *lib/rjb.rb
	define Rjb_JavaBridge class for support @wrapped delegation
 *test/test.rb
	add @wrapped object invoking test
Sun Apr 22 arton
 *ext/rjb.c
	add Rjb_JavaProxy#initialize_proxy method for preparing proxy instance.
	RJB_VERSION -> 1.4.0
 *lib/rjb
	add rjb own directory
 *lib/rjbextension.rb
	move contents into rjb/extension.rb
 *lib/rjb/extension.rb
	extension library to handle package name easily.
 *lib/rjb/list.rb
	implements each method for Iterable and Iterator.
Sun Apr 22 arton
 *ext/rjb.c
	use URLClassLoader#addJar for Rjb::add_jar method.
	It accepts unhierarchic load order.
 *test/jartest2.jar
	for test Rjb::add_jar. this jar contains a class that extends class in jartest.jar
 *test/jartest.rb
	testing Rjb::add_jar, first jartest2.jar then jartest.jar
 *test/jartest2.rb
	testing Rjb::add_jar for an array.
 *test/jartest3.rb
	testing Rjb::add_jar in NoClassDefError condition.
Sat Jan 28 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.9
 *ext/jniwrap.h
	skip __int64 definition if already defined (for latest mingw/gcc).
Sat Dec 03 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.8
	ignore attach_jvm after rjb was unloaded. (Bug #29451)
 *test/test_unload.rb
	add test for unload. if Rjb run after unloading then it causes crush.
Wed Nov 09 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.7
 *test/test.rb (test_reraise_exception)
	skip test if RUBY_VERSION =~ /^1\.8/
Wed Nov 09 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.6
 *ext/rjbexception.c
	add to_str method into the exception class.
	ruby internally calls the method when reraising the exception.
 *test/test.rb (test_reraise_exception)
	add reraise test
Mon Jul 18 arton
 *ext/rjb.c
	fix inhiritance test.