@@ -1,3 +1,8 @@
+Wed Nov 14 arton
+ *ext/rjb.c
+	RJB_VERSION -> 1.4.3 for new gem
+ *ext/extconf.rb
+	remove checking dl.h, rjb not need to include it.
 Sat Oct 6 arton
  *ext/rjb.c
 	RJB_VERSION -> 1.4.2
